src/test/ui/issues/issue-69725.stderr
error[E0599]: no method named `clone` found for struct `Struct<A>` in the current scope
  --> $DIR/issue-69725.rs:7:32
   |
LL |     let _ = Struct::<A>::new().clone();
   |                                ^^^^^ method not found in `Struct<A>`
   | 
  ::: $DIR/auxiliary/issue-69725.rs:2:1
   |
LL | pub struct Struct<A>(A);
   | ------------------------ doesn't satisfy `Struct<A>: Clone`
   | 
  ::: $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL |     fn clone(&self) -> Self;
   |        -----
   |        |
   |        the method is available for `Arc<Struct<A>>` here
   |        the method is available for `Rc<Struct<A>>` here
   |
   = note: the method `clone` exists but the following trait bounds were not satisfied:
           `A: Clone`
           which is required by `Struct<A>: Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
